--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# MySQL properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.username=root
+spring.datasource.password=Qwer123580...
 
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect-dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
+# HTTP methods
+spring.mvc.hiddenmethod.filter.enabled=true
+server.port=8088
+
+spring.main.allow-circular-references=true
